--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -10,22 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
-            android:id="@+id/imgClick"
+            android:id="@+id/imgClick1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
             android:layout_weight="1"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:srcCompat="@android:drawable/presence_online" />
 
         <ImageView
-            android:id="@+id/imgStop"
+            android:id="@+id/imgClick2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/presence_invisible" />
+            android:visibility="invisible"
+            app:srcCompat="@android:drawable/presence_online" />
 
     </LinearLayout>
 
